--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="leagues">Leagues</string>
     <string name="settings">Settings</string>
+    <string name="event_info">%s, %s, %s, Round %s</string>
 </resources>
