--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Mini-Sofascore</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="leagues">Leagues</string>
     <string name="settings">Settings</string>
     <string name="event_info">%s, %s, %s, Round %s</string>
+    <string name="dash">-</string>
+    <string name="foul">Foul</string>
 </resources>
