--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="event_info">%s, %s, %s, Round %s</string>
     <string name="dash">-</string>
     <string name="foul">Foul</string>
+    <string name="ladder">#</string>
+    <string name="matches_played">P</string>
+    <string name="wins">W</string>
+    <string name="losses">L</string>
+    <string name="difference">DIFF</string>
+    <string name="team">Team</string>
+    <string name="points">Points</string>
+
 </resources>
