--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="difference">DIFF</string>
     <string name="team">Team</string>
     <string name="points">Points</string>
-
+    <string name="ft">FT</string>
 </resources>
