--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,12 @@
     <string name="ft">FT</string>
     <string name="coach">Coach</string>
     <string name="players">Players</string>
+    <string name="team_info">Team info</string>
+    <string name="total_players">Total players</string>
+    <string name="foreign_players">Foreign players</string>
+    <string name="coach_name">Coach: %s</string>
+    <string name="tournaments">Tournaments</string>
+    <string name="venue">Venue</string>
+    <string name="next_match">Next match</string>
+    <string name="stadium">Stadium</string>
 </resources>
