--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,12 @@
     <string name="football">Football</string>
     <string name="basketball">Basketball</string>
     <string name="am_football">Am. Football</string>
+    <string name="required">Required</string>
+    <string name="email_hint">E-mail</string>
+    <string name="password_hint">Password</string>
+    <string name="forgotten_password">Forgot your password?</string>
+    <string name="login">Log in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="no_account">Don\'t have an account?</string>
 </resources>
