--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,8 @@
     <string name="sign_up">Sign up</string>
     <string name="confirm_password">Confirm password</string>
     <string name="no_account">Don\'t have an account?</string>
+    <string name="log_out">Log out</string>
+    <string name="invalid_email">Invalid e-mail address</string>
+    <string name="invalid_password">Min. 8 characters</string>
+    <string name="password_no_match">Passwords don\'t match</string>
 </resources>
